--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body class="flex-ctr">
     <h1>simon</h1>
+    <h2 id="message">Click 'PLAY GAME' to start!</h2>
     <main>
         <section id="board">
             <div id='red' class="clrbtns"></div>
