--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
             <div id='grn' class="clrbtns"></div>
             <div id='yel' class="clrbtns"></div>
             <div id='blu' class="clrbtns"></div>
-            <div id="ctr"></div>
+            <div id="ctr">
+                <button>PLAY GAME</button>
+            </div>
         </section>
     </div>
     </main>
     <section id="gameControls">
-        <button>PLAY GAME</button>
         <span class='counts'>count: <span id='counter'>0</span></span>
         <span class='counts'>high score: <span id='highScore'>0</span></span>
     </section>
